...
    private let textFieldCPF: UITextField = {
        let textField = RegistrationTextField()
        textField.attributedPlaceholder = NSAttributedString(
            string: "000.000.00-00",
            attributes: [NSAttributedString.Key.foregroundColor: UIColor(named: "Disabled") ?? UIColor.black]
        )
        textField.accessibilityIdentifier = "CPFRegistration_TextField_CPF"
        textField.translatesAutoresizingMaskIntoConstraints = false
        return textField
    }()

    private let labelError: UILabel = {
        let attrString = NSMutableAttributedString(string: "Esse CPF já esta em uso, digite novamente ou faça login.")
...
        label.isHidden = true
        return label
    }()

    private lazy var buttonGo: ButtonPrimary = {
        let button = ButtonPrimary()
        button.accessibilityIdentifier = "CPFRegistration_Button_GO"
        button.addTarget(self, action: #selector(goButtonTapped(_:)), for: .touchUpInside)
        button.translatesAutoresizingMaskIntoConstraints = false
        return button
    }()

    // MARK: - Lifecycle
...
        super.viewDidLoad()
        setupVC()
    }

    // MARK: - Setup
    private func setupVC() {
        view.accessibilityIdentifier = "Registration_VC_CPF"
        view.backgroundColor = UIColor(named: "Background")
        settingButton(isDisabled: true)
        settingLabelText()
        buildHierarchy()
        buildConstraints()

...
